Pres2 : injection des dépendances par instanciation dynamique (IDao et IMetier)